--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,7 +7,7 @@
 	max-width:100%;
 	height: 1700px;
 }
-
+/*=================Área do Topo=====================*/
 .topo {
 	width: 100%;
 	height: 120px;
@@ -74,9 +74,13 @@ ul li a {
 ul li a:hover {
 	color: #fff;
 }
+
+/*=================Fim Área do Topo=====================*/
+
+
 /*==========Sliser===========*/
 /*===================Título slider==================*/
-.titulo-slider{
+/*.titulo-slider{
 	font-size: 50px;
     font-family: "Fira Code", serif;
 	font-weight: bold;
@@ -90,7 +94,7 @@ ul li a:hover {
 
 h3{
 	display: block;
-}
+}*/
 /*===================Fim Título slider==================*/
 
 .banner{
